--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "hbs": "^4.0.4"
   },
   "devDependencies": {
-    "jest": "^24.8.0"
+    "jest": "^24.8.0",
+    "node-sass": "^4.12.0",
+    "node-sass-middleware": "^0.11.0"
   }
 }
